--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -137,6 +137,8 @@
     <Text Include="test.txt" />
     <Text Include="test2.txt" />
     <Text Include="test3.txt" />
+    <Text Include="test4.txt" />
+    <Text Include="test5.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
