--- a/PEA_P1.vcxproj.filters
+++ b/PEA_P1.vcxproj.filters
@@ -37,5 +37,11 @@
     <Text Include="test3.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="test4.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="test5.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
