Added TSP Brute Force Benchmark. Extra fixes for the menu.

--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -129,9 +129,11 @@
   <ItemGroup>
     <ClCompile Include="PEA_P1.cpp" />
     <ClCompile Include="TravellingSalesmanProblem.cpp" />
+    <ClCompile Include="TravellingSalesmanProblemBenchmark.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TravellingSalesmanProblem.hpp" />
+    <ClInclude Include="TravellingSalesmanProblemBenchmark.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
