Fixed Brute Force - tweak with permutations loop. Started adding implementation of Little's Algorithm for TSP.

--- a/PEA_P1.vcxproj.filters
+++ b/PEA_P1.vcxproj.filters
@@ -49,5 +49,14 @@
     <Text Include="test5.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="testLittle.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="test6.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="test7.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
