--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -141,6 +141,9 @@
     <Text Include="test3.txt" />
     <Text Include="test4.txt" />
     <Text Include="test5.txt" />
+    <Text Include="test6.txt" />
+    <Text Include="test7.txt" />
+    <Text Include="testLittle.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
