--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -143,6 +143,7 @@
     <Text Include="test5.txt" />
     <Text Include="test6.txt" />
     <Text Include="test7.txt" />
+    <Text Include="test8.txt" />
     <Text Include="testLittle.txt" />
     <Text Include="tsp10.txt" />
     <Text Include="tsp12.txt" />
