--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -137,11 +137,13 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="test.txt" />
+    <Text Include="test10.txt" />
     <Text Include="test2.txt" />
     <Text Include="test3.txt" />
     <Text Include="test4.txt" />
     <Text Include="test5.txt" />
     <Text Include="test8.txt" />
+    <Text Include="test9.txt" />
     <Text Include="testLittle.txt" />
     <Text Include="tsp10.txt" />
     <Text Include="tsp12.txt" />
@@ -149,6 +151,7 @@
     <Text Include="tsp14.txt" />
     <Text Include="tsp15.txt" />
     <Text Include="tsp17.txt" />
+    <Text Include="tsp5.txt" />
     <Text Include="tsp6_1.txt" />
     <Text Include="tsp6_2.txt" />
   </ItemGroup>
