Extra tests. Small fixes.

--- a/PEA_P1.vcxproj.filters
+++ b/PEA_P1.vcxproj.filters
@@ -37,9 +37,6 @@
     <Text Include="test.txt">
       <Filter>Resource Files</Filter>
     </Text>
-    <Text Include="test2.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
     <Text Include="test3.txt">
       <Filter>Resource Files</Filter>
     </Text>
@@ -86,6 +83,12 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="test10.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="manual.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="manual2.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
