--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -136,9 +136,10 @@
     <ClInclude Include="TravellingSalesmanProblemBenchmark.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="manual.txt" />
+    <Text Include="manual2.txt" />
     <Text Include="test.txt" />
     <Text Include="test10.txt" />
-    <Text Include="test2.txt" />
     <Text Include="test3.txt" />
     <Text Include="test4.txt" />
     <Text Include="test5.txt" />
