--- a/PEA_P1.vcxproj
+++ b/PEA_P1.vcxproj
@@ -136,10 +136,9 @@
     <ClInclude Include="TravellingSalesmanProblemBenchmark.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="manual.txt" />
-    <Text Include="manual2.txt" />
     <Text Include="test.txt" />
     <Text Include="test10.txt" />
+    <Text Include="test2.txt" />
     <Text Include="test3.txt" />
     <Text Include="test4.txt" />
     <Text Include="test5.txt" />
@@ -152,6 +151,10 @@
     <Text Include="tsp14.txt" />
     <Text Include="tsp15.txt" />
     <Text Include="tsp17.txt" />
+    <Text Include="tsp17_1.txt" />
+    <Text Include="tsp18.txt" />
+    <Text Include="tsp19.txt" />
+    <Text Include="tsp20.txt" />
     <Text Include="tsp5.txt" />
     <Text Include="tsp6_1.txt" />
     <Text Include="tsp6_2.txt" />
